# rabbitmq-c

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile.in
examples/: CMakeLists.txt  amqp_listen_websocket.c  amqp_sendstring_websocket.c
librabbitmq/: CMakeLists.txt  amqp.h  amqp_socket.c  amqp_websocket.c  amqp_websocket.h  kws_rfc6455util.c  kws_rfc6455util.h  kws_websocket.c  kws_websocket.h  kws_websocket_channel.h
robot-tests/: CMakeLists.txt  amqp_channel_test.cpp  basic_publish_consume_test.cpp  connect_disconnect_test.cpp  connect_test.cpp
